[gd_scene load_steps=18 format=3 uid="uid://cscevg7c6lg8s"]

[ext_resource type="PackedScene" uid="uid://21c3cd4vt6wo" path="res://scenes/characters/enemies/BasicEnemy.tscn" id="1_u5n5m"]
[ext_resource type="Script" path="res://scenes/characters/enemies/FollowerEnemy.gd" id="2_163bw"]
[ext_resource type="Texture2D" uid="uid://c5ogp7rp47m3u" path="res://assets/characters/Charger.png" id="3_0r1dc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a83ba"]
atlas = ExtResource("3_0r1dc")
region = Rect2(0, 12, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll2m6"]
atlas = ExtResource("3_0r1dc")
region = Rect2(16, 12, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uy6t"]
atlas = ExtResource("3_0r1dc")
region = Rect2(32, 12, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8g7i"]
atlas = ExtResource("3_0r1dc")
region = Rect2(48, 12, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_beq7p"]
atlas = ExtResource("3_0r1dc")
region = Rect2(0, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpc7n"]
atlas = ExtResource("3_0r1dc")
region = Rect2(16, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_rihpy"]
atlas = ExtResource("3_0r1dc")
region = Rect2(32, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb2mc"]
atlas = ExtResource("3_0r1dc")
region = Rect2(48, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_oarqc"]
atlas = ExtResource("3_0r1dc")
region = Rect2(0, 24, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao4rl"]
atlas = ExtResource("3_0r1dc")
region = Rect2(16, 24, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bjx8"]
atlas = ExtResource("3_0r1dc")
region = Rect2(32, 24, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_bntd0"]
atlas = ExtResource("3_0r1dc")
region = Rect2(48, 24, 16, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_6q31o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a83ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll2m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uy6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8g7i")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_beq7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpc7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rihpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb2mc")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oarqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao4rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bjx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bntd0")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwrtt"]
size = Vector2(10, 9)

[node name="FollowerEnemy" instance=ExtResource("1_u5n5m")]
mass = 0.01
script = ExtResource("2_163bw")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_6q31o")
animation = &"down"

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_nwrtt")

[node name="StaminaTimer" type="Timer" parent="." index="2"]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="StaminaTimer" to="." method="stopSprint"]
